# lsimons-auto

./: .gitignore  AGENT.md  AGENTS.md  DESIGN.md  GEMINI.md  README.md  install.py  pyproject.toml  start_the_day.py
.beads/: issues.jsonl
.github/workflows/: ci.yml
docs/spec/: 006-install-script.md  008-launch-apps-hostname-filtering.md  009-git-sync-action.md  011-agent-action.md  012-tmux-backend.md  016-clean-tmp-action.md
etc/: com.leosimons.gdrive-sync.plist  com.leosimons.start-the-day.plist
lsimons_auto/: github.py  lsimons_auto.py  start_the_day.py
lsimons_auto/actions/: agent.py  ask_m365_copilot.scpt  clean_tmp.py  echo.py  gdrive_sync.py  git_actions_upgrade.py  git_actions_watch.py  git_sync.py  launch_apps.py  organize_desktop.py  tc.py  update_desktop_background.py
lsimons_auto/actions/agent_impl/: __init__.py  workspace.py
lsimons_auto/actions/agent_manager_impl/: cli.py  ghostty.py  session.py  tmux.py  workspace.py  worktree.py  zed.py
tests/: test_actions_integration.py  test_agent.py  test_clean_tmp.py  test_gdrive_sync.py  test_git_actions_upgrade.py  test_git_actions_watch.py  test_github.py  test_install.py  test_launch_apps.py  test_organize_desktop.py  test_start_the_day.py  test_update_desktop_background.py
tests/agent_impl/: test_cli.py  test_tmux.py  test_workspace.py
tests/agent_manager_impl/: test_session.py  test_tmux.py
