[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lsimons_auto"
version = "0.1.0"
description = "A lightweight daily startup script for macOS that helps you establish consistent morning routines"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pillow>=10.0.0",
]
authors = [
    { name = "lsimons" }
]

[project.scripts]
start-the-day = "lsimons_auto.start_the_day:main"
auto = "lsimons_auto.lsimons_auto:main"

[tool.setuptools.packages.find]
include = ["lsimons_auto*"]
exclude = ["etc*"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]

[tool.basedpyright]
pythonVersion = "3.14"
typeCheckingMode = "strict"
reportDeprecated = false

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.8.0",
    "basedpyright>=1.22.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]
addopts = "-m 'not integration'"
